[gd_scene load_steps=38 format=2]

[ext_resource path="res://Environement/TileSet/TourInterieur.tres" type="TileSet" id=1]
[ext_resource path="res://Scenes/Combat/Cursor/Cursor.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Combat/HUD/ActionMenu/CombatButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Characters/Character.tscn" type="PackedScene" id=4]
[ext_resource path="res://GUI_theme/transparant_UI_theme.tres" type="Theme" id=5]
[ext_resource path="res://Scenes/Combat/Map/Map.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Combat/HUD/Timeline/States/TimeLineStates.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Combat/HUD/Timeline/States/Idle.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Combat/HUD/Timeline/States/Extract.gd" type="Script" id=9]
[ext_resource path="res://Scenes/Combat/CombatStates/Move.gd" type="Script" id=10]
[ext_resource path="res://Scenes/Combat/HUD/HUD.gd" type="Script" id=11]
[ext_resource path="res://Scenes/Combat/CombatStates/Overlook.gd" type="Script" id=12]
[ext_resource path="res://Scenes/Combat/CombatLoop.gd" type="Script" id=13]
[ext_resource path="res://Scenes/Combat/HUD/Debug/ActiveActorLabel.gd" type="Script" id=14]
[ext_resource path="res://Scenes/Combat/CombatStates/CombatStateMachine.gd" type="Script" id=15]
[ext_resource path="res://Scenes/Combat/HUD/Debug/CombatStateLabel.gd" type="Script" id=16]
[ext_resource path="res://Scenes/Combat/CombatStates/Attack.gd" type="Script" id=17]
[ext_resource path="res://Scenes/Combat/CombatStates/Skills.gd" type="Script" id=18]
[ext_resource path="res://Scenes/Combat/CombatStates/Items.gd" type="Script" id=19]
[ext_resource path="res://Scenes/Combat/CombatStates/Wait.gd" type="Script" id=20]
[ext_resource path="res://Scenes/Combat/HUD/ActorInfos/ActiveActorInfos.gd" type="Script" id=21]
[ext_resource path="res://Scenes/Combat/HUD/ActorInfos/Portrait/PortBorder.png" type="Texture" id=22]
[ext_resource path="res://Scenes/Characters/CptHart/Portrait/Hart (transparant).png" type="Texture" id=23]
[ext_resource path="res://Scenes/Combat/HUD/ActorInfos/Jauge/JaugeBorder.png" type="Texture" id=24]
[ext_resource path="res://Scenes/Combat/HUD/ActorInfos/Portrait/PortBackGround.png" type="Texture" id=25]
[ext_resource path="res://Scenes/Combat/HUD/ActorInfos/Jauge/Jauge.png" type="Texture" id=26]
[ext_resource path="res://Fonts/BoldCapitalPixel.tres" type="DynamicFont" id=27]
[ext_resource path="res://Scenes/Combat/HUD/ActorInfos/Actions/ActionLeft.tscn" type="PackedScene" id=28]
[ext_resource path="res://Scenes/Combat/ActionsLeft.gd" type="Script" id=29]
[ext_resource path="res://Scenes/Characters/Ella/Portrait/Ella (transparant).png" type="Texture" id=30]
[ext_resource path="res://Scenes/Characters/CptHart/HartStats.tres" type="Resource" id=31]
[ext_resource path="res://Scenes/Combat/HUD/Debug/Actions.gd" type="Script" id=32]
[ext_resource path="res://Scenes/Characters/CptHart/Timeline/HartTL.png" type="Texture" id=33]
[ext_resource path="res://Scenes/Combat/HUD/Timeline/States/Move.gd" type="Script" id=34]
[ext_resource path="res://Scenes/Combat/HUD/Timeline/States/Insert.gd" type="Script" id=35]
[ext_resource path="res://Scenes/Combat/HUD/Timeline/Timeline.gd" type="Script" id=36]
[ext_resource path="res://Scenes/Combat/Map/Layer.gd" type="Script" id=37]

[node name="Combat" type="Node2D"]
script = ExtResource( 13 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 19.1445, 112.338 )
z_index = 999
current = true

[node name="CombatState" type="Node" parent="."]
script = ExtResource( 15 )

[node name="Overlook" type="Node" parent="CombatState"]
script = ExtResource( 12 )

[node name="Move" type="Node" parent="CombatState"]
script = ExtResource( 10 )

[node name="Line" type="Line2D" parent="CombatState/Move"]
width = 7.0
default_color = Color( 0.356863, 0.839216, 0.329412, 0.619608 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 19

[node name="Attack" type="Node" parent="CombatState"]
script = ExtResource( 17 )

[node name="Skills" type="Node" parent="CombatState"]
script = ExtResource( 18 )

[node name="Items" type="Node" parent="CombatState"]
script = ExtResource( 19 )

[node name="Wait" type="Node" parent="CombatState"]
script = ExtResource( 20 )

[node name="Map" parent="." instance=ExtResource( 6 )]

[node name="Ground" parent="Map/Layer" index="0"]
tile_data = PoolIntArray( 0, 32, 65537, 1, 32, 65537, 2, 32, 65537, 3, 32, 65537, 4, 32, 65537, 5, 32, 65537, 6, 32, 65537, 7, 32, 65537, 8, 32, 65537, 9, 32, 65537, 10, 32, 65537, 11, 32, 65537, 12, 32, 65537, 13, 32, 65537, 14, 32, 65537, 15, 32, 65537, 16, 32, 65537, 17, 32, 65537, 65536, 32, 65537, 65537, 32, 65537, 65538, 32, 65537, 65539, 32, 65537, 65540, 32, 65537, 65541, 32, 65537, 65542, 32, 65537, 65543, 32, 65537, 65544, 32, 65537, 65545, 32, 65537, 65546, 32, 65537, 65547, 32, 65537, 65548, 32, 65537, 65549, 32, 65537, 65550, 32, 65537, 65551, 32, 65537, 65552, 32, 65537, 65553, 32, 65537, 131072, 32, 65537, 131073, 32, 65537, 131074, 32, 65537, 131075, 32, 65537, 131076, 32, 65537, 131077, 32, 65537, 131078, 32, 65537, 131079, 32, 65537, 131080, 32, 65537, 131081, 32, 65537, 131082, 32, 65537, 131083, 32, 65537, 131084, 32, 65537, 131085, 32, 65537, 131086, 32, 65537, 131087, 32, 65537, 131088, 32, 65537, 131089, 32, 65537, 196608, 32, 65537, 196609, 32, 65537, 196610, 32, 65537, 196611, 32, 65537, 196612, 32, 65537, 196613, 32, 65537, 196614, 32, 65537, 196615, 32, 65537, 196616, 32, 65537, 196617, 32, 65537, 196618, 32, 65537, 196619, 32, 65537, 196620, 32, 65537, 196621, 32, 65537, 196622, 32, 65537, 196623, 32, 65537, 196624, 32, 65537, 196625, 32, 65537, 262144, 32, 65537, 262145, 32, 65537, 262146, 32, 65537, 262147, 32, 65537, 262148, 32, 65537, 262149, 32, 65537, 262150, 32, 65537, 262151, 32, 65537, 262152, 32, 65537, 262153, 32, 65537, 262154, 32, 65537, 262155, 32, 65537, 262156, 32, 65537, 262157, 32, 65537, 262158, 32, 65537, 262159, 32, 65537, 262160, 32, 65537, 262161, 32, 65537, 327680, 32, 65537, 327681, 32, 65537, 327682, 32, 65537, 327683, 32, 65537, 327684, 32, 65537, 327685, 32, 65537, 327686, 32, 65537, 327687, 32, 65537, 327688, 32, 65537, 327689, 32, 65537, 327690, 32, 65537, 327691, 32, 65537, 327692, 32, 65537, 327693, 32, 65537, 327694, 32, 65537, 327695, 32, 65537, 327696, 32, 65537, 327697, 32, 65537, 393216, 32, 65537, 393217, 32, 65537, 393218, 32, 65537, 393219, 32, 65537, 393220, 32, 65537, 393221, 32, 65537, 393222, 32, 65537, 393223, 32, 65537, 393224, 32, 65537, 393225, 32, 65537, 393226, 32, 65537, 393227, 32, 65537, 393228, 32, 65537, 393229, 32, 65537, 393230, 32, 65537, 393231, 32, 65537, 393232, 32, 65537, 393233, 32, 65537, 458752, 32, 65537, 458753, 32, 65537, 458754, 32, 65537, 458755, 32, 65537, 458756, 32, 65537, 458757, 32, 65537, 458758, 32, 65537, 458759, 32, 65537, 458760, 32, 65537, 458761, 32, 65537, 458762, 32, 65537, 458763, 32, 65537, 458764, 32, 65537, 458765, 32, 65537, 458766, 32, 65537, 458767, 32, 65537, 458768, 32, 65537, 458769, 32, 65537, 524288, 32, 65537, 524289, 32, 65537, 524290, 32, 65537, 524291, 32, 65537, 524292, 32, 65537, 524293, 32, 65537, 524294, 32, 65537, 524295, 32, 65537, 524296, 32, 65537, 524297, 32, 65537, 524298, 32, 65537, 524299, 32, 65537, 524300, 32, 65537, 524301, 32, 65537, 524302, 32, 65537, 524303, 32, 65537, 524304, 32, 65537, 524305, 32, 65537, 589824, 32, 65537, 589825, 32, 65537, 589826, 32, 65537, 589827, 32, 65537, 589828, 32, 65537, 589829, 32, 65537, 589830, 32, 65537, 589831, 32, 65537, 589832, 32, 65537, 589833, 32, 65537, 589834, 32, 65537, 589835, 32, 65537, 589836, 32, 65537, 589837, 32, 65537, 589838, 32, 65537, 589839, 32, 65537, 589840, 32, 65537, 589841, 32, 65537, 655360, 32, 65537, 655361, 32, 65537, 655362, 32, 65537, 655363, 32, 65537, 655364, 32, 65537, 655365, 32, 65537, 655366, 32, 65537, 655367, 32, 65537, 655368, 32, 65537, 655369, 32, 65537, 655370, 32, 65537, 655371, 32, 65537, 655372, 32, 65537, 655373, 32, 65537, 655374, 32, 65537, 655375, 32, 65537, 655376, 32, 65537, 655377, 32, 65537, 720896, 32, 65537, 720897, 32, 65537, 720898, 32, 65537, 720899, 32, 65537, 720900, 32, 65537, 720901, 32, 65537, 720902, 32, 65537, 720903, 32, 65537, 720904, 32, 65537, 720905, 32, 65537, 720906, 32, 65537, 720907, 32, 65537, 720908, 32, 65537, 720909, 32, 65537, 720910, 32, 65537, 720911, 32, 65537, 720912, 32, 65537, 720913, 32, 65537, 786432, 32, 65537, 786433, 32, 65537, 786434, 32, 65537, 786435, 32, 65537, 786436, 32, 65537, 786437, 32, 65537, 786438, 32, 65537, 786439, 32, 65537, 786440, 32, 65537, 786441, 32, 65537, 786442, 32, 65537, 786443, 32, 65537, 786444, 32, 65537, 786445, 32, 65537, 786446, 32, 65537, 786447, 32, 65537, 786448, 32, 65537, 786449, 32, 65537, 851968, 32, 65537, 851969, 32, 65537, 851970, 32, 65537, 851971, 32, 65537, 851972, 32, 65537, 851973, 32, 65537, 851974, 32, 65537, 851975, 32, 65537, 851976, 32, 65537, 851977, 32, 65537, 851978, 32, 65537, 851979, 32, 65537, 851980, 32, 65537, 851981, 32, 65537, 851982, 32, 65537, 851983, 32, 65537, 851984, 32, 65537, 851985, 32, 65537, 917504, 32, 65537, 917505, 32, 65537, 917506, 32, 65537, 917507, 32, 65537, 917508, 32, 65537, 917509, 32, 65537, 917510, 32, 65537, 917511, 32, 65537, 917512, 32, 65537, 917513, 32, 65537, 917514, 32, 65537, 917515, 32, 65537, 917516, 32, 65537, 917517, 32, 65537, 917518, 32, 65537, 917519, 32, 65537, 917520, 32, 65537, 917521, 32, 65537, 983040, 32, 65537, 983041, 32, 65537, 983042, 32, 65537, 983043, 32, 65537, 983044, 32, 65537, 983045, 32, 65537, 983046, 32, 65537, 983047, 32, 65537, 983048, 32, 65537, 983049, 32, 65537, 983050, 32, 65537, 983051, 32, 65537, 983052, 32, 65537, 983053, 32, 65537, 983054, 32, 65537, 983055, 32, 65537, 983056, 32, 65537, 983057, 32, 65537, 1048576, 32, 65537, 1048577, 32, 65537, 1048578, 32, 65537, 1048579, 32, 65537, 1048580, 32, 65537, 1048581, 32, 65537, 1048582, 32, 65537, 1048583, 32, 65537, 1048584, 32, 65537, 1048585, 32, 65537, 1048586, 32, 65537, 1048587, 32, 65537, 1048588, 32, 65537, 1048589, 32, 65537, 1048590, 32, 65537, 1048591, 32, 65537, 1048592, 32, 65537, 1048593, 32, 65537, 1114112, 32, 65537, 1114113, 32, 65537, 1114114, 32, 65537, 1114115, 32, 65537, 1114116, 32, 65537, 1114117, 32, 65537, 1114118, 32, 65537, 1114119, 32, 65537, 1114120, 32, 65537, 1114121, 32, 65537, 1114122, 32, 65537, 1114123, 32, 65537, 1114124, 32, 65537, 1114125, 32, 65537, 1114126, 32, 65537, 1114127, 32, 65537, 1114128, 32, 65537, 1114129, 32, 65537 )

[node name="Interactives" type="YSort" parent="Map"]
__meta__ = {
"_edit_lock_": true
}

[node name="Cursor" parent="Map/Interactives" instance=ExtResource( 2 )]

[node name="Hart" parent="Map/Interactives" instance=ExtResource( 4 )]
position = Vector2( 144, 144 )
portrait = ExtResource( 23 )
timeline_port = ExtResource( 33 )
MaxStats = ExtResource( 31 )

[node name="Ella" parent="Map/Interactives" instance=ExtResource( 4 )]
position = Vector2( -95.5, 140 )
portrait = ExtResource( 30 )
timeline_port = ExtResource( 33 )
MaxStats = ExtResource( 31 )

[node name="Obstacles" type="TileMap" parent="Map/Interactives"]
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 16 )
cell_tile_origin = 1
cell_y_sort = true
format = 1
tile_data = PoolIntArray( 65541, 8, 0, 65542, 3, 0, 65543, 46, 0, 65552, 47, 0, 65553, 9, 0, 131078, 7, 0, 262145, 20, 0, 393223, 21, 0, 393228, 37, 0, 458764, 12, 0, 458765, 18, 0, 458766, 48, 0, 589838, 19, 0, 655361, 3, 0, 720897, 2, 0, 786433, 2, 0, 851969, 9, 0, 917514, 6, 0, 917517, 5, 0 )

[node name="Layer2" type="YSort" parent="Map"]
script = ExtResource( 37 )

[node name="Layer3" type="YSort" parent="Map"]
script = ExtResource( 37 )

[node name="Layer4" type="YSort" parent="Map"]
script = ExtResource( 37 )

[node name="Layer5" type="YSort" parent="Map"]
script = ExtResource( 37 )

[node name="Layer6" type="YSort" parent="Map"]
script = ExtResource( 37 )

[node name="Layer7" type="YSort" parent="Map"]
script = ExtResource( 37 )

[node name="Layer8" type="YSort" parent="Map" index="9"]
script = ExtResource( 37 )

[node name="HUD" type="CanvasLayer" parent="."]
layer = 2
script = ExtResource( 11 )

[node name="ActiveActorInfos" type="Control" parent="HUD"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -185.0
margin_top = -4.0
margin_right = -1.0
margin_bottom = 60.0
mouse_filter = 2
script = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortraitContainer" type="Position2D" parent="HUD/ActiveActorInfos"]
position = Vector2( 146.092, 44.9053 )
__meta__ = {
"_edit_lock_": true
}

[node name="Border" type="Sprite" parent="HUD/ActiveActorInfos/PortraitContainer"]
texture = ExtResource( 22 )
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="Sprite" parent="HUD/ActiveActorInfos/PortraitContainer"]
modulate = Color( 0.286275, 0.427451, 0.435294, 1 )
texture = ExtResource( 25 )
__meta__ = {
"_edit_lock_": true
}

[node name="Portrait" type="Sprite" parent="HUD/ActiveActorInfos/PortraitContainer"]
__meta__ = {
"_edit_lock_": true
}

[node name="Jauges" type="VBoxContainer" parent="HUD/ActiveActorInfos"]
margin_left = 1.0
margin_top = 13.0
margin_right = 102.0
margin_bottom = 41.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HP" type="TextureProgress" parent="HUD/ActiveActorInfos/Jauges"]
margin_right = 101.0
margin_bottom = 12.0
value = 100.0
texture_under = ExtResource( 24 )
texture_progress = ExtResource( 26 )
tint_progress = Color( 1, 0.101961, 0.101961, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/ActiveActorInfos/Jauges/HP"]
margin_left = -17.0
margin_top = -1.0
margin_right = 23.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 27 )
text = "HP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MP" type="TextureProgress" parent="HUD/ActiveActorInfos/Jauges"]
margin_top = 16.0
margin_right = 101.0
margin_bottom = 28.0
value = 50.0
texture_under = ExtResource( 24 )
texture_progress = ExtResource( 26 )
tint_progress = Color( 0, 0.811765, 1, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="HUD/ActiveActorInfos/Jauges/MP"]
margin_left = -17.0
margin_top = -1.0
margin_right = 23.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 27 )
text = "MP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionsLeft" type="HBoxContainer" parent="HUD/ActiveActorInfos"]
anchor_left = 0.304
anchor_top = 0.734
anchor_right = 0.533
anchor_bottom = 1.0
margin_left = 3.91489
margin_top = -1.86724
margin_right = 3.77888
margin_bottom = -3.89123
script = ExtResource( 29 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ActionLeft3" parent="HUD/ActiveActorInfos/ActionsLeft" instance=ExtResource( 28 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 10.0
margin_bottom = 15.0

[node name="ActionLeft2" parent="HUD/ActiveActorInfos/ActionsLeft" instance=ExtResource( 28 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 14.0
margin_right = 24.0
margin_bottom = 15.0

[node name="ActionLeft1" parent="HUD/ActiveActorInfos/ActionsLeft" instance=ExtResource( 28 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 28.0
margin_right = 38.0
margin_bottom = 15.0

[node name="ActionMenu" type="VBoxContainer" parent="HUD"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -63.0
margin_top = -118.5
margin_right = -9.0
margin_bottom = -7.5
custom_constants/separation = -4
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Move" parent="HUD/ActionMenu" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 16.0
margin_right = 54.0
margin_bottom = 35.0
theme = ExtResource( 5 )
text = "MOVE"

[node name="Attack" parent="HUD/ActionMenu" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 31.0
margin_right = 54.0
margin_bottom = 50.0
text = "ATTACK"

[node name="Skills" parent="HUD/ActionMenu" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 46.0
margin_right = 54.0
margin_bottom = 65.0
text = "SKILLS"

[node name="Items" parent="HUD/ActionMenu" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 61.0
margin_right = 54.0
margin_bottom = 80.0
text = "ITEMS"

[node name="Wait" parent="HUD/ActionMenu" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 76.0
margin_right = 54.0
margin_bottom = 95.0
text = "WAIT"

[node name="Debug" type="VBoxContainer" parent="HUD"]
margin_left = -293.401
margin_top = -58.9641
margin_right = -188.401
margin_bottom = 51.0359
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CombatState" type="Label" parent="HUD/Debug"]
margin_right = 105.0
margin_bottom = 14.0
script = ExtResource( 16 )

[node name="ActiveActor" type="Label" parent="HUD/Debug"]
margin_top = 18.0
margin_right = 105.0
margin_bottom = 32.0
script = ExtResource( 14 )

[node name="Actions" type="Label" parent="HUD/Debug"]
margin_top = 36.0
margin_right = 105.0
margin_bottom = 50.0
script = ExtResource( 32 )

[node name="TimeLineStates" type="Node2D" parent="HUD"]
position = Vector2( 4.9756, 7.12211 )
script = ExtResource( 7 )

[node name="Idle" type="Node" parent="HUD/TimeLineStates"]
script = ExtResource( 8 )

[node name="Extract" type="Node" parent="HUD/TimeLineStates"]
script = ExtResource( 9 )

[node name="Move" type="Node" parent="HUD/TimeLineStates"]
script = ExtResource( 34 )

[node name="Insert" type="Node" parent="HUD/TimeLineStates"]
script = ExtResource( 35 )

[node name="Timeline" type="Node2D" parent="HUD/TimeLineStates"]
script = ExtResource( 36 )

[editable path="Map"]

[editable path="Map/Layer"]
